# Rust-Machine

./: .gitignore  Cargo.toml  ReadMe.md  rustfmt.toml
docs/: Helper_sheet.ods  Macro-instructions.ods
docs/I_Machine_Architecture_Specification/: .gitignore  1_Data_Types.qmd  1___Data_Types.qmd  2_Memory_Layout.qmd  2___Memory_Layout.qmd  3_10_Function-calling_instructions.qmd  3_11_Binding_instructions.qmd  3_12_Catch_instructions.qmd  3_13_Lexical_variable_accessors.qmd  3_14_Instance_variable_accessors.qmd  3_15_Subprimitive_instructions.qmd  3_1_List_function_operations.qmd  3_1_List_function_opetions.qmd  3_2_Interruptible_instructions.qmd  3_3_Predicate_instructions.qmd  3_4_Numeric_operations.qmd  3_5_Data_movement_instructions.qmd  3_6_Field-extraction_instructions.qmd  3_7_Array_operations.qmd  3_8_Branch_and_loop_instructions.qmd  3_9_Block_instructions.qmd  3_Macroinstruction_Set.qmd  3___Macroinstruction_Set.qmd  4_Function_Calling.qmd  4___Function_Calling.qmd  5___Exception_Handling.qmd  6_Appendices.qmd  6___Appendices.qmd  _quarto.yml  index.qmd  old_index.qmd
src/: main.rs  utils.rs
src/common/: constants.rs  instruction_format.rs  memory_cell.rs  types.rs
src/emulator/: c-emulator.rs  config.rs  dispatch.rs  emulator.rs  initialization.rs  introspection.rs
src/hardware/: c-memory.rs  cache_line.rs  cpu.rs  instructions.rs  machine.rs  memory.rs  network.rs  page_base.rs  traps.rs
src/life_support/: SystemComm.rs  cold_load.rs  console.rs  disks.rs  genera_cptfont.rs  initialization.rs  message_channels.rs  network_linux.rs  polling.rs  (+3 more)
(+78 files in other folders)
